perf: disable reactflow edge events fix: add node height to prevent vulnerable label being cut off

--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -367,3 +367,7 @@ tr:hover {
   background: var(--accent-amber);
   width: 5px !important;
 }
+
+.react-flow__edge {
+  pointer-events: none;
+}
